# DDBook-Docker

./: Dockerfile  pyproject.toml  requirements.txt
DigiDuckBook/: __init__.py  main_bot.py
DigiDuckBook/contacts/: address_book.py
DigiDuckBook/note_book/: notes_oop.py
