[tool.poetry]
name = "digiduckbook"
version = "0.1.0"
description = ""
authors = ["Andriy414414 <133632261+Andriy414414@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.19.0"
prompt-toolkit = "3.0.39"
pygame = "2.5.1"
wcwidth = "0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
